<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>badmacro</name>
  <version>2.0.0</version>
  <license>BSD</license>

  <description>minimal example to show bad rclcpp macro problem</description>

  <maintainer email="clalancette@osrfoundation.org">Chris Lalancette</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
